--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
