--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "prepare": "husky install",
+    "test": "prettier --write . && stylelint '**/*.css' && eslint ."
   },
   "devDependencies": {
     "eslint": "^7.30.0",
@@ -13,6 +15,7 @@
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
-    "vite": "^2.4.0"
+    "vite": "^2.4.0",
+    "husky": "^7.0.0"
   }
 }
