--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "devDependencies": {
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
-    "vite": "^2.4.0",
-    "husky": "^7.0.0"
+    "vite": "^2.4.0"
   }
 }
