--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
+    "typescript": "^4.3.5",
     "vite": "^2.4.0"
   }
 }
