--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "prettier --write . && stylelint '**/*.css' && eslint ."
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.0",
